--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,11 +1015,12 @@ section {
 # Testimonials
 --------------------------------------------------------------*/
 .testimonials {
-  padding: 80px 0;
+  display: none;
+  /* padding: 80px 0;
   background: url("../img/testimonials-bg.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
-  position: relative;
+  position: relative; */
 }
 
 .testimonials::before {
