--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,10 @@ h6 {
   }
 }
 
+.deleteIcon{
+  display: none;
+}
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
