display none to contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1214,6 +1214,10 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+.contact{
+  display: none;
+}
+
 .contact .info {
   width: 100%;
   background: #fff;
