display non to the clients section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,6 +582,7 @@ section {
 # Clients
 --------------------------------------------------------------*/
 .clients {
+  display: none;
   padding-top: 20px;
 }
 
