--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ h6 {
 #hero {
   width: 100%;
   min-height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/logo_anime.gif") top center;
   background-size: cover;
   position: relative;
 }
