commit before merge?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -937,6 +937,10 @@ section {
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
+.counts{
+  display: none;
+}
+
 .counts .content {
   padding: 30px 0;
 }
