--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1412,10 +1412,11 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: black;
+  /* background: black;
   padding: 0 0 30px 0;
   color: #fff;
-  font-size: 14px;
+  font-size: 14px; */
+  display: none;
 }
 
 #footer .footer-top {
