--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1412,11 +1412,10 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  /* background: black;
+ background: black;
   padding: 0 0 30px 0;
   color: #fff;
-  font-size: 14px; */
-  display: none;
+  font-size: 14px; 
 }
 
 #footer .footer-top {
@@ -1515,14 +1514,19 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   color: #fa7a4b;
+
+}
+
+.footer-newsletter{
+  display: none;
 }
 
 #footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
+   margin-top: 30px;
   background: #fff;
   padding: 6px 10px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 4px; 
 }
 
 #footer .footer-top .footer-newsletter form input[type=email] {
